fixing typing indicator on mobile

--- a/src/styles/_room.scss
+++ b/src/styles/_room.scss
@@ -212,7 +212,7 @@
 
 .typing-indicator {
   text-align: center;
-  margin-top: -10px;
+  margin-top: -20px;
 
   @include breakpoint($breakpoint-desktop) {
     margin-top: 0;
